--- a/_giohang.html
+++ b/_giohang.html
@@ -16,13 +16,13 @@
 
   <!--CSS-->
   <link rel="stylesheet" href="dist/css/uikit.min.css" />
-  <link rel="stylesheet" href="style.css?v=1731124264">
+  <link rel="stylesheet" href="style.css?v=1737646258">
 
   <!--JS-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-  <script src="js/app.js?v=1731124264"></script>
+  <script src="js/app.js?v=1737646258"></script>
 
   <style>
     .be-vietnam-pro-thin {
@@ -214,14 +214,14 @@
       <div class="uk-container">
         <div uk-navbar>
           <div class="uk-navbar-left uk-flex-1">
-            <a href="." class="uk-navbar-item uk-logo"><img src="images/logo.png" alt=""></a>
+            <a href="." class="uk-navbar-item uk-logo"><img style="height: 60px;" src="images/logo.jpg" alt=""></a>
             <div class="uk-navbar-item uk-flex-auto">
               <div class="uk-inline uk-width">
                 <form class="uk-search uk-search-default uk-width">
                   <input class="header__center__search__input fz-14 be-vietnam-pro-semibold uk-search-input uk-border-pill" type="search" placeholder="Tìm kiếm sách theo tên" aria-label="Tìm kiếm sách theo tên">
                   <span class="header__center__search__icon uk-search-icon-flip" uk-search-icon></span>
                 </form>
-                <div class="border-10 search__dropdown uk-width" uk-dropdown="mode: click">
+                <div class="border-10 search__dropdown uk-width" uk-dropdown="toggle: .header__center__search__input; mode: click">
                   <div class="sora-600 text-9F9595 fz-16">Xu hướng</div>
                   <div class="space-h-16"></div>
                   <div class="divider"></div>
@@ -892,7 +892,7 @@
                   <div class="uk-cover-container border-6">
                     <img class="uk-transition-scale-up uk-transition-opaque" src="about:blank" uk-img data-src="https://picsum.photos/280/430/?random=0" alt="" uk-cover>
                     <canvas width="123" height="187"></canvas>
-                    <span class="giohang__label uk-position-top-right fz-12 be-vietnam-pro-semibold" style="color: #704500;">-20<span class="fz-12">%</span></span>
+                    <span class="giohang__label uk-position-top-right fz-12 be-vietnam-pro-semibold" style="color: #fff;">-20<span class="fz-12">%</span></span>
                     <a href="chi_tiet_sach.php" class="uk-position-cover"></a>
                   </div>
                 </div>
@@ -915,7 +915,7 @@
                       <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11" fill="none">
                         <path d="M6 0L7.34708 4.1459H11.7063L8.17963 6.7082L9.52671 10.8541L6 8.2918L2.47329 10.8541L3.82037 6.7082L0.293661 4.1459H4.65292L6 0Z" fill="#999"/>
                       </svg>
-                      <div class="uk-position-center-left uk-text-nowrap uk-position-z-index uk-overflow-hidden" style="width: 92%">
+                      <div class="uk-position-center-left uk-text-nowrap uk-position-z-index uk-overflow-hidden" style="width: 43%">
                         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11" fill="none">
                           <path d="M6 0L7.34708 4.1459H11.7063L8.17963 6.7082L9.52671 10.8541L6 8.2918L2.47329 10.8541L3.82037 6.7082L0.293661 4.1459H4.65292L6 0Z" fill="#FFCC00"/>
                         </svg>
@@ -951,18 +951,19 @@
                       <div class="uk-width-auto">
                         <div class="uk-grid uk-grid-50 uk-flex-middle" uk-grid>
                           <div>
-                            <div class="uk-inline">
-                              <button class="chi_tiet_sach__btnDropnav uk-button uk-button-small uk-button-default uk-border-pill" type="button">
-                                <span>1 Tháng</span>
-                                <span uk-drop-parent-icon></span>
-                              </button>
-                              <div class="uk-card uk-card-default" uk-drop="mode: click">
-                                <ul class="uk-nav uk-dropdown-nav">
-                                  <li><label><input class="uk-radio" type="radio" name="radio2"> 1 Tháng</label></li>
-                                  <li><label><input class="uk-radio" type="radio" name="radio2"> 3 Tháng</label></li>
-                                  <li><label><input class="uk-radio" type="radio" name="radio2"> 6 Tháng</label></li>
-                                  <li><label><input class="uk-radio" type="radio" name="radio2"> Vĩnh viễn</label></li>
-                                </ul>
+                            <div class="uk-grid-12 uk-grid uk-flex-middle" uk-grid>
+                              <div>
+                                <div class="chi_tiet_sach__btn2">
+                                  <span class="icon16 icon16--minus"></span>
+                                </div>
+                              </div>
+                              <div>
+                                <div class="fz-12 be-vietnam-pro-medium uk-text-center" style="color: #000;width: 20px;">1</div>
+                              </div>
+                              <div>
+                                <div class="chi_tiet_sach__btn2">
+                                  <span class="icon16 icon16--plus"></span>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -992,7 +993,7 @@
                   <div class="uk-cover-container border-6">
                     <img class="uk-transition-scale-up uk-transition-opaque" src="about:blank" uk-img data-src="https://picsum.photos/280/430/?random=1" alt="" uk-cover>
                     <canvas width="123" height="187"></canvas>
-                    <span class="giohang__label uk-position-top-right fz-12 be-vietnam-pro-semibold" style="color: #704500;">-20<span class="fz-12">%</span></span>
+                    <span class="giohang__label uk-position-top-right fz-12 be-vietnam-pro-semibold" style="color: #fff;">-20<span class="fz-12">%</span></span>
                     <a href="chi_tiet_sach.php" class="uk-position-cover"></a>
                   </div>
                 </div>
@@ -1015,7 +1016,7 @@
                       <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11" fill="none">
                         <path d="M6 0L7.34708 4.1459H11.7063L8.17963 6.7082L9.52671 10.8541L6 8.2918L2.47329 10.8541L3.82037 6.7082L0.293661 4.1459H4.65292L6 0Z" fill="#999"/>
                       </svg>
-                      <div class="uk-position-center-left uk-text-nowrap uk-position-z-index uk-overflow-hidden" style="width: 15%">
+                      <div class="uk-position-center-left uk-text-nowrap uk-position-z-index uk-overflow-hidden" style="width: 99%">
                         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11" fill="none">
                           <path d="M6 0L7.34708 4.1459H11.7063L8.17963 6.7082L9.52671 10.8541L6 8.2918L2.47329 10.8541L3.82037 6.7082L0.293661 4.1459H4.65292L6 0Z" fill="#FFCC00"/>
                         </svg>
